--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
@@ -52,13 +52,13 @@
                 <h2>works</h2>
                 <div class="works-all">
                     <article>
-                        <a href="Deliverables.html">
+                        <a href="html/Deliverables.html">
                             <div class="grayscale">
                                 <img src="image/work1.png" alt="成果物Ⅰ" width="400" height="250">
                             </div>
                         </a>
 
-                        <a href="Deliverables2.html">
+                        <a href="html/Deliverables2.html">
                             <div class="grayscale">
                                 <img src="image/work2.png" alt="成果物Ⅱ" width="400" height="250">
                             </div>
@@ -71,13 +71,13 @@
         <footer class="inner">
             <ul>
                 <li>
-                    <a href="index.html">top</a>
+                    <a href="html/index.html">top</a>
                 </li>
                 <li>
-                    <a href="about.html">about</a>
+                    <a href="html/about.html">about</a>
                 </li>
                 <li>
-                    <a href="works.html">works</a>
+                    <a href="html/works.html">works</a>
                 </li>
             </ul>
             <p>
