--- a/html/Deliverables.html
+++ b/html/Deliverables.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="css/Deliverables.css">
+        <link rel="stylesheet" href="/css/Deliverables.css">
     </head>
 
     <body>
@@ -14,13 +14,13 @@
                 <nav>
                     <ul class="global-nav">
                         <li>
-                            <a href="html/index.html">top</a>
+                            <a href="index.html">top</a>
                         </li>
                         <li>
-                            <a href="html/about.html">about</a>
+                            <a href="habout.html">about</a>
                         </li>
                         <li>
-                            <a href="html/works.html">works</a>
+                            <a href="works.html">works</a>
                         </li>
                     </ul>
                 </nav>
@@ -40,13 +40,13 @@
         <footer class="inner">
             <ul>
                 <li>
-                    <a href="html/index.html">top</a>
+                    <a href="index.html">top</a>
                 </li>
                 <li>
-                    <a href="html/about.html">about</a>
+                    <a href="about.html">about</a>
                 </li>
                 <li>
-                    <a href="html/works.html">works</a>
+                    <a href="works.html">works</a>
                 </li>
             </ul>
             <p>
