--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
 
     <body>
@@ -36,7 +36,7 @@
                 <h2>about</h2>
                 <div class="about-all">
                     <article>
-                        <img src="image/aicon.jpg">
+                        <img src="/image/aicon.jpg">
                         <ul>
                             <li>氏名：田中　龍仁</li>
                             <li>学校：公立はこだて未来大学</li>
@@ -52,15 +52,15 @@
                 <h2>works</h2>
                 <div class="works-all">
                     <article>
-                        <a href="html/Deliverables.html">
+                        <a href="Deliverables.html">
                             <div class="grayscale">
-                                <img src="image/work1.png" alt="成果物Ⅰ" width="400" height="250">
+                                <img src="/image/work1.png" alt="成果物Ⅰ" width="400" height="250">
                             </div>
                         </a>
 
-                        <a href="html/Deliverables2.html">
+                        <a href="Deliverables2.html">
                             <div class="grayscale">
-                                <img src="image/work2.png" alt="成果物Ⅱ" width="400" height="250">
+                                <img src="/image/work2.png" alt="成果物Ⅱ" width="400" height="250">
                             </div>
                         </a>
                     </article>
@@ -71,13 +71,13 @@
         <footer class="inner">
             <ul>
                 <li>
-                    <a href="html/index.html">top</a>
+                    <a href="index.html">top</a>
                 </li>
                 <li>
-                    <a href="html/about.html">about</a>
+                    <a href="about.html">about</a>
                 </li>
                 <li>
-                    <a href="html/works.html">works</a>
+                    <a href="works.html">works</a>
                 </li>
             </ul>
             <p>
