--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
@@ -36,7 +36,7 @@
                 <h2>about</h2>
                 <div class="about-all">
                     <article>
-                        <img src="../image/icon2.jpg">
+                        <img src="icon2.jpg">
                         <ul>
                             <li>氏名：田中 龍仁（タナカ リュウジ）</li>
                             <li>学校：公立はこだて未来大学</li>
@@ -54,13 +54,13 @@
                     <article>
                         <a href="Deliverables.html">
                             <div class="grayscale">
-                                <img src="../image/work1.png" alt="成果物Ⅰ" width="400" height="250">
+                                <img src="work1.png" alt="成果物Ⅰ" width="400" height="250">
                             </div>
                         </a>
 
                         <a href="Deliverables2.html">
                             <div class="grayscale">
-                                <img src="../image/work2.png" alt="成果物Ⅱ" width="400" height="250">
+                                <img src="work2.png" alt="成果物Ⅱ" width="400" height="250">
                             </div>
                         </a>
                     </article>
