--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
@@ -38,13 +38,13 @@
                     <article>
                         <a href="Deliverables.html">
                             <div class="grayscale">
-                                <img src="../image/work1.png" alt="成果物Ⅰ" width="400" height="250">
+                                <img src=".work1.png" alt="成果物Ⅰ" width="400" height="250">
                             </div>
                         </a>
 
                         <a href="Deliverables2.html">
                             <div class="grayscale">
-                                <img src="../image/work2.png" alt="成果物Ⅱ" width="400" height="250">
+                                <img src="work2.png" alt="成果物Ⅱ" width="400" height="250">
                             </div>
                         </a>
                     </article>
