--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
@@ -36,7 +36,7 @@
                 <h2>about</h2>
                 <div class="about-all">
                     <article>
-                        <img src="../image/icon.jpg">
+                        <img src="icon.jpg">
                         <ul>
                             <li>氏名：田中　龍仁</li>
                             <li>学校：公立はこだて未来大学</li>
