--- a/Deliverables.html
+++ b/Deliverables.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Harry's portfolio</title>
         <meta name="description" content="Harry's portfolio">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
