--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                     <article>
                         <a href="Deliverables.html">
                             <div class="grayscale">
-                                <img src="work1.png" alt="成果物Ⅰ" width="400" height="250">
+                                <img src="work1.PNG" alt="成果物Ⅰ" width="400" height="250">
                             </div>
                         </a>
 
                         <a href="Deliverables2.html">
                             <div class="grayscale">
-                                <img src="work2.png" alt="成果物Ⅱ" width="400" height="250">
+                                <img src="work2.PNG" alt="成果物Ⅱ" width="400" height="250">
                             </div>
                         </a>
                     </article>
